# gobannus

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  camera.py  crud.py  database.py  docker-compose.override.yml  docker-compose.yml  logger.py  model.py  recording.py  recordings.db  requirements.txt  schema.py  store.py
api/: Dockerfile  README.md  clean.sh  pyproject.toml  tox.ini
api/src/api/: app.py  crud.py  database.py  env.py  logger.py  model.py  recording.py  store.py
cli/: README.md  pyproject.toml
cli/src/cli/: cli.py  main.py
db/: Dockerfile  README.md
db-api/: Dockerfile  README.md  postgrest.conf
db-migration/: 00000000000010_extensions.sql  00000000000020_roles.sql  00000000000025_schema.sql  00000000000030_postgrest.sql  00000000000040_init.sql  Dockerfile  README.md  entrypoint.sh
