[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "abt-api"
authors = [
    { name = "Beau Albiston", email = "beauzo@hotmail.com" },
]
description = "Airplane build traker (abt) API server"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "pydantic",
    "python-dotenv",
    "python-ffmpeg",
    "SQLAlchemy",
    "uvicorn",
    "wakeonlan",
]
dynamic = ["version"]

[tool]

[tool.hatch.version]
path = "src/api/__init__.py"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
